--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
    backend:
       build:
@@ -12,8 +10,7 @@ services:
       env_file:
          - ./fli-guide-backend/.env
       volumes:
-         - ./fli-guide-backend:/app # Mount source code
-         - /app/node_modules # Prevent host overwrite of node_modules
+         - /app/node_modules
       depends_on:
          - db
 
