--- a/fli-guide-react/Dockerfile
+++ b/fli-guide-react/Dockerfile
@@ -1,23 +1,25 @@
 # Stage 1: Build the React app using Vite
-FROM node:20-alpine AS build
-
-WORKDIR /app
+FROM node:20-slim AS build
 
 # Install dependencies
+WORKDIR /app
 COPY package*.json ./
-RUN npm install
+RUN npm install --no-fund --no-audit --legacy-peer-deps
 
-# Copy source code and build
+# Copy source and build
 COPY . .
 RUN npm run build
 
-# Stage 2: Serve with nginx
+# Stage 2: Serve the built app with Nginx
 FROM nginx:alpine
 
-# Copy built files from the previous stage
+# Remove default nginx index page
+RUN rm -rf /usr/share/nginx/html/*
+
+# Copy built assets from the build stage
 COPY --from=build /app/dist /usr/share/nginx/html
 
-# Copy custom nginx config to support React Router
+# Copy custom nginx config
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
