Updating nginx.conf for reverse proxying

--- a/fli-guide-react/nginx.conf
+++ b/fli-guide-react/nginx.conf
@@ -1,9 +1,27 @@
 server {
   listen 80;
+  server_name _;
+
+  # Serve React frontend
   root /usr/share/nginx/html;
   index index.html;
 
+  # Gzip static files
+  gzip on;
+  gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+
+  # Handle React routing (fallback to index.html)
   location / {
     try_files $uri /index.html;
+  }
+
+  # Proxy API requests to backend (fli-backend container)
+  location /api/ {
+    proxy_pass http://fli-backend:5025;
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection 'upgrade';
+    proxy_set_header Host $host;
+    proxy_cache_bypass $http_upgrade;
   }
 }
